--- a/config.yml
+++ b/config.yml
@@ -25,9 +25,11 @@ before:
 
 steps:
  Step 1: Start 
-- title: # the title of the step, shown to the learner in the course progress page
-  description: # a description of the step, shown to the learner in the course progress page
+- title: Test step1 # the title of the step, shown to the learner in the course progress page
+  description: This is the first step # a description of the step, shown to the learner in the course progress page
   event: issue_commented.created # the event that will trigger the actions to be executed, full list at https://developer.github.com/v3/activity/events/types/
   actions: # a list of the actions that will occur when the step is triggered by an event
-  - type: # the type of action, full list at https://lab.github.com/docs/actions
-
+- type: gate                            # using the gate action
+  left: '%payload.pull_request.title%'  # get the title from the pull request object inside of the payload
+  operator: ===                         # check for strict equality, see more at https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Comparison_Operators#Identity
+  right: Add name to README             # this is the expected value
