--- a/config.yml
+++ b/config.yml
@@ -29,7 +29,7 @@ steps:
   description: This is the first step # a description of the step, shown to the learner in the course progress page
   event: issue_commented.created # the event that will trigger the actions to be executed, full list at https://developer.github.com/v3/activity/events/types/
   actions: # a list of the actions that will occur when the step is triggered by an event
-- type: gate                            # using the gate action
-  left: '%payload.pull_request.title%'  # get the title from the pull request object inside of the payload
-  operator: ===                         # check for strict equality, see more at https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Comparison_Operators#Identity
-  right: Add name to README             # this is the expected value
+  - type: gate
+    left: '%payload.pull_request.title%'
+    operator: ===
+    right: "Creating the config file"
