--- a/config.yml
+++ b/config.yml
@@ -29,7 +29,12 @@ steps:
   description: This is the first step # a description of the step, shown to the learner in the course progress page
   event: issue_commented.created # the event that will trigger the actions to be executed, full list at https://developer.github.com/v3/activity/events/types/
   actions: # a list of the actions that will occur when the step is triggered by an event
-  - type: gate
-    left: '%payload.pull_request.title%'
+- type: gate
+    left: '%payload.pull_request.base.ref%'
     operator: ===
-    right: "Creating the config file"
+    right: master
+    else:
+    - type: respond
+      with: 01_try-again.md
+- type: respond
+  with: 01_nice-work.md
