--- a/config.yml
+++ b/config.yml
@@ -36,5 +36,12 @@ steps:
     else:
     - type: respond
       with: 01_try-again.md
+- type: gate
+    left: '%payload.pull_request.base.ref%'
+    operator: ===
+    right: master
+    else:
+    - type: respond
+      with: 01_try-again.md
 - type: respond
   with: 01_nice-work.md
