--- a/config.yml
+++ b/config.yml
@@ -1,33 +1,2 @@
-title: Test # a name for your Learning Lab course
-tagline: test # a short description for your Learning Lab course, displayed on the course catalog
-description: This is a test # a longer description for your Learning Lab course, displayed on the course's landing page
-
-# Repository setup
-# The following section template information for the repository
-# This will be used when the repository is crated for each individual learner
-
-template:
-  name: Test    # the name of the repository when it is created for the learner
-  repo: https://github.com/DavideC03/Test    # the name of the template repository from which to clone for the learner
-
-# `before` block
-# Actions to take place after the learner registers, but before they start interacting with their repo
-
-before:
-- type: respond
-  with: 01_first-response.md# the type of action, full list at https://lab.github.com/docs/actions/
-  # some actions require additional options, those should appear below `type:`
-  # you can execute multiple actions in the `before` block
-
-# Steps for the course
-# A list of steps that take the learner through the course
-# Create one step for each action that a learner will complete
-
-steps:
- Step 1: Start 
-- title: Test step1 # the title of the step, shown to the learner in the course progress page
-  description: This is the first step # a description of the step, shown to the learner in the course progress page
-  event: issue_commented.created # the event that will trigger the actions to be executed, full list at https://developer.github.com/v3/activity/events/types/
-  actions: # a list of the actions that will occur when the step is triggered by an event
-- type: respond
-  with: 01_nice-work.md
+type: respond
+with: 01_nice-work.md
