--- a/config.yml
+++ b/config.yml
@@ -23,17 +23,17 @@ before:
 # Create one step for each action that a learner will complete
 
 steps:
- Step 1: Start 
-- title: # the title of the step, shown to the learner in the course progress page
-  description: # a description of the step, shown to the learner in the course progress page
-  event: # the event that will trigger the actions to be executed, full list at https://developer.github.com/v3/activity/events/types/
+# Step 1: EDIT HERE - INTERNAL COMMENT DESCRIBING STEP 
+- title: Title
+  description: Understand how map works on arrays
+  event: pull_request.synchronize
   actions: # a list of the actions that will occur when the step is triggered by an event
-- type: gate
-    left: '%payload.pull_request.base.ref%'
+  - type: gate
+    left: '%payload.pull_request.title%'
     operator: ===
-    right: master
+    right: "Greet world"
     else:
     - type: respond
       with: 01_try-again.md
-- type: respond
-  with: 01_nice-work.md
+  - type: respond
+    with: 01_nice-work.md
