--- a/config.yml
+++ b/config.yml
@@ -1,6 +1,6 @@
-title: Test # a name for your Learning Lab course
-tagline: test # a short description for your Learning Lab course, displayed on the course catalog
-description: This is a test # a longer description for your Learning Lab course, displayed on the course's landing page
+title: Test
+tagline: test
+description: This is a test
 
 # Repository setup
 # The following section template information for the repository
