--- a/config.yml
+++ b/config.yml
@@ -8,7 +8,7 @@ description: This is a test
 
 template:
   name: Test
-  repo: https://github.com/DavideC03/Test
+  repo: https://github.com/DavideC03/lab-starter
   
 # `before` block
 # Actions to take place after the learner registers, but before they start interacting with their repo
