--- a/config.yml
+++ b/config.yml
@@ -8,7 +8,7 @@ description: This is a test
 
 template:
   name:     test-functional-programming-course
-  repo:     github-course-template-repo
+  repo:     lab-starter
   
 # `before` block
 # Actions to take place after the learner registers, but before they start interacting with their repo
